; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopnz.c_m68k_op_subi_32_d.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopnz.c_m68k_op_subi_32_d.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DY = common dso_local global i64 0, align 8
@FLAG_N = common dso_local global i32 0, align 4
@FLAG_Z = common dso_local global i64 0, align 8
@FLAG_C = common dso_local global i32 0, align 4
@FLAG_X = common dso_local global i32 0, align 4
@FLAG_V = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @m68k_op_subi_32_d() #0 {
  %1 = alloca i64*, align 8
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store i64* @DY, i64** %1, align 8
  %5 = call i64 (...) @OPER_I_32()
  store i64 %5, i64* %2, align 8
  %6 = load i64*, i64** %1, align 8
  %7 = load i64, i64* %6, align 8
  store i64 %7, i64* %3, align 8
  %8 = load i64, i64* %3, align 8
  %9 = load i64, i64* %2, align 8
  %10 = sub nsw i64 %8, %9
  store i64 %10, i64* %4, align 8
  %11 = load i64, i64* %4, align 8
  %12 = call i32 @NFLAG_32(i64 %11)
  store i32 %12, i32* @FLAG_N, align 4
  %13 = load i64, i64* %4, align 8
  %14 = call i64 @MASK_OUT_ABOVE_32(i64 %13)
  store i64 %14, i64* @FLAG_Z, align 8
  %15 = load i64, i64* %2, align 8
  %16 = load i64, i64* %3, align 8
  %17 = load i64, i64* %4, align 8
  %18 = call i32 @CFLAG_SUB_32(i64 %15, i64 %16, i64 %17)
  store i32 %18, i32* @FLAG_C, align 4
  store i32 %18, i32* @FLAG_X, align 4
  %19 = load i64, i64* %2, align 8
  %20 = load i64, i64* %3, align 8
  %21 = load i64, i64* %4, align 8
  %22 = call i32 @VFLAG_SUB_32(i64 %19, i64 %20, i64 %21)
  store i32 %22, i32* @FLAG_V, align 4
  %23 = load i64, i64* @FLAG_Z, align 8
  %24 = load i64*, i64** %1, align 8
  store i64 %23, i64* %24, align 8
  ret void
}

declare dso_local i64 @OPER_I_32(...) #1

declare dso_local i32 @NFLAG_32(i64) #1

declare dso_local i64 @MASK_OUT_ABOVE_32(i64) #1

declare dso_local i32 @CFLAG_SUB_32(i64, i64, i64) #1

declare dso_local i32 @VFLAG_SUB_32(i64, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
